Se agrega nuevo mensaje de error para producto ya existe

--- a/src/main/config/properties/messages.properties
+++ b/src/main/config/properties/messages.properties
@@ -12,6 +12,7 @@ error.VALOR_GASTO_INVALIDO=El valor del gasto debe ser mayor a cero
 # Errores de negocio - ProductoService
 error.PRODUCTO_REQUEST_NULO=Los datos del producto no pueden ser nulos
 error.PRODUCTO_ID_INVALIDO=El identificador del producto no es válido
+error.PRODUCTO_EXISTE=El producto ya existe
 error.PRODUCTO_NO_ENCONTRADO=Producto no encontrado
 error.PRODUCTO_INACTIVO=El producto no está disponible (está inactivo)
 error.NOMBRE_PRODUCTO_VACIO=El nombre del producto es obligatorio
